objects/Amazon_S3_Credential__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores the amazon s3 credentials used to upload attachments.</description>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Amazon S3 Credential</label>
</CustomObject>